--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>KeuanganKu V2.0</title>
+    <title>KeuanganKu V2.7 Logic Fix</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -458,7 +458,7 @@
             <select id="langSelect" onchange="changeLanguage(this.value)">
                 <option value="id">🇮🇩 Indonesia</option>
                 <option value="en">🇬🇧 English</option>
-                <option value="ch">CH Mandarin</option>
+<option value="ch">🇨🇳 Mandarin</option>
             </select>
 
             <label class="text-sm" style="margin-top:10px; display:block" data-i18n="currency">Mata Uang / Currency</label>
