--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>KeuanganKu V2.17 - Auto BIN</title>
+    <title>KeuanganKu</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -360,7 +360,7 @@
                 </div>
                 <div>
                     <label class="text-sm" data-i18n="category">Kategori</label>
-                    <select id="tCat" onchange="updateSub('tCat','tSub')"><option value="">Pilih Kategori...</option></select>
+                    <select id="tCat" onchange="updateSub('tCat','tSub')"><option value="">Pilih Kategori</option></select>
                     <select id="tSub"><option value="">-</option></select>
                     <button onclick="addTransaction()" class="btn-block" style="margin-top:10px" data-i18n="btn_save">Simpan</button>
                 </div>
@@ -436,7 +436,7 @@
             <h3 data-i18n="subs_routine">🔄 Langganan Rutin</h3>
             <p class="text-sm" style="margin-bottom:15px" data-i18n="subs_desc">Jangan sampai lupa bayar Netflix/Wifi!</p>
             <div style="display:flex; gap:10px; max-width:500px; margin:0 auto;">
-                <input type="text" id="sName" data-i18n-ph="ph_name" placeholder="Nama">
+                <input type="text" id="sName" data-i18n-ph="ph_name" placeholder="Netflix, Spotify, dll">
                 <input type="number" id="sAmount" data-i18n-ph="ph_cost" placeholder="Biaya">
                 <select id="sCycle" style="width:100px"><option value="1" data-i18n="month">Bulan</option><option value="12" data-i18n="year">Tahun</option></select>
             </div>
@@ -578,7 +578,7 @@
         <label class="text-sm" data-i18n="lbl_note">Catatan</label>
         <input type="text" id="editNote">
         <div style="display:flex; gap:10px; margin-top:15px">
-            <button onclick="saveEditTransaction()" class="btn-success btn-block" data-i18n="btn_save">Simpan</button>
+            <button onclick="saveModalTransaction()" class="btn-success btn-block" data-i18n="btn_save">Simpan</button>
             <button onclick="closeEditModal()" class="btn-danger btn-block" data-i18n="btn_cancel">Batal</button>
         </div>
     </div>
@@ -617,7 +617,10 @@
     </div>
 </div>
 
-<div id="toast-container"></div>
+    <div id="toast-container"></div>
+
+    <!-- Floating Add Button (visible on 'Catat' view) -->
+    <button id="fabAddTrans" title="Tambah Transaksi" onclick="openAddModal()" style="position:fixed; right:20px; bottom:30px; z-index:1200; width:56px; height:56px; border-radius:50%; background:var(--primary); color:white; font-size:1.6rem; display:none; align-items:center; justify-content:center; box-shadow:0 8px 20px rgba(0,0,0,0.2); border:none;">+</button>
 
 <script>
 // --- DICTIONARY & I18N ---
@@ -843,6 +846,13 @@ function switchView(viewId) {
     if(viewId === 'subs') renderSubs();
     if(viewId === 'wallets') { renderWallets(); refreshTransferDropdowns(); }
     if(viewId === 'account') { renderAccount(); }
+    updateFabVisibility(viewId);
+}
+
+function updateFabVisibility(viewId) {
+    const fab = document.getElementById('fabAddTrans'); if(!fab) return;
+    const allowed = ['dashboard','analytics','wallets','transactions','debts','subs'];
+    fab.style.display = allowed.includes(viewId) ? 'flex' : 'none';
 }
 if (typeof ChartDataLabels !== 'undefined') Chart.register(ChartDataLabels);
 
@@ -1065,6 +1075,10 @@ function init() {
     populateChartFilters(); 
     refreshCats(); refreshWalletsDropdown(); renderDashboard(); renderHistory();
     renderAccount(); updateProfileUI(); renderCharts();
+    // ensure FAB visibility matches initial view
+    const active = document.querySelector('.view-section.active');
+    const viewId = active ? active.id.replace('view-','') : 'dashboard';
+    updateFabVisibility(viewId);
 }
 
 function updateProfile() {
@@ -1215,6 +1229,43 @@ function saveEditTransaction() {
         note: document.getElementById('editNote').value
     };
     saveData(); closeEditModal(); renderDashboard(); renderHistory(); showToast("Updated!");
+}
+
+function closeEditModal() { 
+    document.getElementById('editModal').classList.remove('active'); 
+    // reset modal title to default
+    const h = document.querySelector('#editModal h3'); if(h) h.innerText = t('modal_edit');
+}
+
+function openAddModal() {
+    // prepare modal for new transaction
+    document.getElementById('editId').value = '';
+    document.getElementById('editDate').valueAsDate = new Date();
+    document.getElementById('editType').value = 'expense';
+    document.getElementById('editAmount').value = '';
+    document.getElementById('editNote').value = '';
+    // populate categories and subs
+    const ec = document.getElementById('editCat'); ec.innerHTML = `<option value="">${t('opt_select')}</option>`; Object.keys(categories).forEach(c=>ec.innerHTML+=`<option value="${c}">${c}</option>`);
+    document.getElementById('editCat').value = '';
+    updateSub('editCat','editSub');
+    // default wallet
+    if(wallets && wallets.length) document.getElementById('editWallet').value = wallets[0].id;
+    // set modal title
+    const h = document.querySelector('#editModal h3'); if(h) h.innerText = '➕ Tambah Transaksi';
+    document.getElementById('editModal').classList.add('active');
+}
+
+function saveNewTransaction() {
+    const amt = Number(document.getElementById('editAmount').value);
+    const wid = Number(document.getElementById('editWallet').value);
+    const tObj = { id: Date.now(), date: document.getElementById('editDate').value, type: document.getElementById('editType').value, cat: document.getElementById('editCat').value, sub: document.getElementById('editSub').value, amount: amt, note: document.getElementById('editNote').value, walletId: wid };
+    if(!tObj.date || !tObj.amount || !tObj.cat) return showToast(t('data_incomplete'), 'error');
+    transactions.push(tObj); saveData(); closeEditModal(); renderDashboard(); renderHistory(); showToast('Saved!');
+}
+
+function saveModalTransaction() {
+    const idVal = document.getElementById('editId').value;
+    if(idVal && idVal !== '') saveEditTransaction(); else saveNewTransaction();
 }
 
 // --- PDF DOWNLOAD ---
